Fix up navbar to make it behave more naturally on small devices

--- a/app/assets/css/layout.scss
+++ b/app/assets/css/layout.scss
@@ -20,9 +20,6 @@
   --bulma-body-background-color: #E7D8B7;
   --bulma-skeleton-background: #E7D8B7;
 }
-.navbar {
-  --bulma-navbar-background-color: #E7D8B7;
-}
 
 .hero-body .subtitle {
   padding-top: 2rem;
